# snowflake-labs

./: .editorconfig  README.md  pyproject.toml
src/module-1/: transformations.sql
src/module-2/: load_from_cli_stage.sql  load_tasty_bytes.sql
src/module-3/: hamburg_sales.sql  hamburg_sales_dynamic_table.sql  hamburg_sales_vs_code.sql
src/module-4/snowflake-native-app/hamburg_weather_native_app/app/ui/: streamlit.py
