[project]
name = "snowflake-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "Amitesh Rai",email = "amiteshrai@outlook.com"}
]
readme = "README.md"
requires-python = "3.10.16"
dependencies = [
    "snowflake-cli-labs (>=3.8.2,<4.0.0)",
    "snowflake-connector-python (>=3.15.0,<4.0.0)",
    "jupyterlab (>=4.4.2,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.81.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyaml (>=25.1.0,<26.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "pinecone (>=7.0.0,<8.0.0)",
    "langchain (>=0.3.25,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
